--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -157,11 +157,10 @@ adapted here is called design for
 change.
 
 \begin{description}
-\item[\refstepcounter{acnum} \actheacnum \label{acHardware}:] The specific
-  hardware on which the software is running.
-\item[\refstepcounter{acnum} \actheacnum \label{acInput}:] The format of the
-  initial input data.
-\item ...
+\item[\refstepcounter{acnum} \actheacnum :] The layout and order of prompts or screens that are presented during the user registration process.
+\item[\refstepcounter{acnum} \actheacnum :] The process by which users discover new content / other users.
+\item[\refstepcounter{acnum} \actheacnum :] Leverage local storage for exercises and workouts instead of storing all data on database. 
+\item[\refstepcounter{acnum} \actheacnum :] Visual styling and color design choices.
 \end{description}
 
 \subsection{Unlikely Changes} \label{SecUchange}
@@ -174,9 +173,9 @@ will potentially need to be modified. Hence, it is not intended that these
 decisions will be changed.
 
 \begin{description}
-\item[\refstepcounter{ucnum} \uctheucnum \label{ucIO}:] Input/Output devices
-  (Input: File and/or Keyboard, Output: File, Memory, and/or Screen).
-\item ...
+\item[\refstepcounter{ucnum} \uctheucnum :] Security requirements and legal compliance requirements are unlikely to be changed: NFR15, NFR16, NFR17, NFR18, NFR22.
+\item[\refstepcounter{ucnum} \uctheucnum :] To maintain accessibility for all users, the following Usability and Humanity requirements are likely to remain unchanged: NFR2, NFR3, NFR4, NFR5, NFR6, NFR7.
+\item[\refstepcounter{ucnum} \uctheucnum :] The performance requirement specified by NFR8 encapsulates the mission of this application, which is to allow users to quickly update / interact with programs. As such, it is unlikely to change.
 \end{description}
 
 \section{Module Hierarchy} \label{SecMH}
