Add system context diagram

--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt, titlepage]{article}
 
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 \usepackage{fullpage}
 \usepackage[round]{natbib}
 \usepackage{multirow}
@@ -98,21 +100,30 @@
 	\section{Scope}
 	
 	\wss{Include a figure that show the System Context (showing the boundary between
-		your system and the environment around it.)}
+		your system and the environment around it.)}\\
 	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[scale=0.55]{system_context}
+		\caption{System Context Diagram}
+	\end{figure}
+
 	\section{Project Overview}
 	
 	\subsection{Normal Behaviour}
+	
+	Normal behaviour for the application can be defined as the state of the available program when all FRs and NFRs are fulfilled. If an FR or NFR is not fulfilled, this is abnormal behaviour, and indicative of the occurrence of an undesired event.
 	
 	\subsection{Undesired Event Handling}
 	
 	\wss{How you will approach undesired events}
 	
-	An `undesired event' can comprise anything form incorrect user input to database failure to connectivity issues. 
+	An `undesired event' can comprise anything from incorrect user input to database failure to connectivity issues. 
 	
 	\textbf{Invalid User Input}: Whenever a user provides incorrect information to a form (e.g. an invalid email address during sign-up), an informative error message is displayed beneath the incorrectly filled field, and a visual queue is given in the form of highlighting the field in red to indicate error. To prevent annoying the user with error messages before they have actually made an error, forms will only display error messages after the first submit attempt. After an initial submit attempt, the error message will remain until the contents of the field are valid. This is to give the user information as to whether or not their entry is valid before having to submit again.
 	
-	\textbf{Connection/Database Failure}: If the application is unable to connect to the internet, and subsequently the server and database, an informative error message is displayed, informing the user to verify their internet connection. Note that a stretch goal for the future is to have the Olympian application save certain information locally to enable the user to perform certain functions offline. Changed local information would be synced with the database once connection is re-established. However, this is a stretch goal, and current requirements and designs list the database as the only information store, no data (other than an authentication token) is stored locally.
+	\textbf{Connection/Database Failure}: If the application is unable to connect to the internet, and subsequently the server and database, an informative error message is displayed, informing the user to verify their internet connection. Note that a stretch goal for the future is to have the Olympian application save certain information locally to enable the user to perform certain functions offline. Changed local information would be synced with the database once connection is re-established. However, this is a stretch goal, and current requirements and designs list the database as the only information store, no data (other than an authentication token) is stored locally. If the database/server itself is failing, an appropriate message is displayed to the user. The message will indicate that the failure is not the fault of the user, but rather an internal failure outside of their control.
+	\\
 	
 	Error messages are kept consistent and concise in format, to make errors easy for the user to recognize and act upon.
 	
