--- a/docs/Design/MIS/MIS.tex
+++ b/docs/Design/MIS/MIS.tex
@@ -76,7 +76,7 @@ See SRS Documentation at \wss{give url}
 
 \section{Introduction}
 
-The following document details the Module Interface Specifications for Olympian, a social workout platform that allows begginer, intermediate, and elite atheletes and fitness enthusiasts to track workouts, post and interact with workouts and programs, and discover and utilize new user generated workout programs. 
+The following document details the Module Interface Specifications for Olympian: a social workout platform that allows begginer, intermediate, and elite atheletes and fitness enthusiasts to track workouts, post and interact with workouts and programs, and discover and utilize new user generated workout programs. 
 
 Complementary documents include the System Requirement Specifications
 and Module Guide.  The full documentation and implementation can be
