SysDesign Intro and Purpose

--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -84,14 +84,12 @@
 	\pagenumbering{arabic}
 	
 	\section{Introduction}
-	
-	\wss{Include references to your other documentation}
-	
+		
+	This document will outline the thought process behind all design decisions and explore design alternatives that were considered.
+
 	\section{Purpose}
 	
-	\wss{Purpose of your design documentation}
-	
-	\wss{Point to your other design documents}
+	The purpose of this design documentation is to justify design decisions and prove that our final design meets all requirements as specified in the Software Requirements Specification (SRS).
 	
 	\section{Scope}
 	
